force-app/main/default/objects/Grid_Settings__mdt/fields/Calendar_Setting__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Setting__c</fullName>
    <label>Calendar Setting</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>