force-app/main/default/objects/Grid_Settings__mdt/fields/Columns__c.field-meta.xml
<CustomField>
    <fullName>Columns__c</fullName>
    <label>Columns</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>