force-app/main/default/objects/Grid_Settings__mdt/fields/Filters__c.field-meta.xml
<CustomField>
    <fullName>Filters__c</fullName>
    <label>Filters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>