force-app/main/default/objects/Grid_Settings__mdt/fields/Grid_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Grid_Configuration__c</fullName>
    <label>Grid Configuration</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>