force-app/main/default/objects/Grid_Settings__mdt/fields/Master_Object_Columns__c.field-meta.xml
<CustomField>
    <fullName>Master_Object_Columns__c</fullName>
    <label>Master Object Columns</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>