force-app/main/default/objects/Grid_Settings__mdt/fields/ReadOnly_Criteria__c.field-meta.xml
<CustomField>
    <fullName>ReadOnly_Criteria__c</fullName>
    <label>ReadOnly Criteria</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>