force-app/main/default/objects/Grid_Settings__mdt/fields/Relationship_Name__c.field-meta.xml
<CustomField>
    <fullName>Relationship_Name__c</fullName>
    <label>RelationShip Api</label>
    <length>255</length>
    <type>Text</type>
</CustomField>