force-app/main/default/objects/Grid_Settings__mdt/fields/Time_Line_Settings__c.field-meta.xml
<CustomField>
    <fullName>Time_Line_Settings__c</fullName>
    <label>Time Line Settings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>